<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Petanque Tool</string>
    <string name="action_settings">Settings</string>
    <string name="titre">Welcome to this new game of petanque</string>
    <string name="explication">Strikes the seven balls before the others players to win the game</string>
    <string name="titre_record">Your best scores and trophies</string>
    <string name="start">Start</string>
    <string name="regles">Rules</string>
    <string name="retour">Return</string>
    <string name="replay">Replay</string>
    <string name="nbjoueur">Number of players ?</string>
    <string name="numjoueur">Turn Player :</string>
    <string name="toucher">Strike ?</string>
    <string name="oui">YES</string>
    <string name="non">NO</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="un">1</string>
    <string name="nbtour">Number turn : </string>
    <string name="menu">Menu</string>
    <string name="quitter">Quit</string>
    <string name="result"><b>Result</b></string>
    <string name="ok">OK</string>
    <string name="joueur">Num Player</string>
    <string name="score">Score</string>
    <string name="reussite">% Target</string>
    <string name="total">Total</string>
    <string name="dialogretour">Do you want to go back and quit this game ?</string>
    <string name="dialogreplay">Do you want to play again ?</string>
    <string name="nbcible">Target player : </string>

</resources>
