<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/fini"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout"
   >
   
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="250dp"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
  	>
  	</LinearLayout>
    
    <TextView
        android:id="@+id/nbjoueur"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:text="@string/nbjoueur"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black_color"
         />
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
  	>
    <Button
        android:id="@+id/btn_moins"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/moins"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/NBJOUEUR"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_weight="3"
        android:background="@color/black_color"
        android:gravity="center_vertical|center_horizontal|center|bottom"
        android:text="@string/un"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red_color"
        android:textSize="32sp" />
    
    <Button
        android:id="@+id/btn_plus"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/plus"
        android:textSize="40sp" />
    
    
    </LinearLayout>
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
  	>
    
    <Button
        android:id="@+id/start"
        android:layout_width="168dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/regles"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:text="@string/regles"
        android:layout_marginTop="8dp" />
    </LinearLayout>
    
    
</LinearLayout>