<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/coup1"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout" >
    
    
     <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/titre"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white_color"
         />
     
      <TextView
        android:id="@+id/explications"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:text="@string/explication"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black_color"
         />
    
    
    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:text="@string/retour"
        android:layout_marginTop="50dp" />
    
  
    
    
    
</LinearLayout>